Ajustando testes unitarios 7